CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(slam)

INCLUDE_DIRECTORIES(utils/include)
ADD_SUBDIRECTORY(utils)

INCLUDE_DIRECTORIES(camera/include)
ADD_SUBDIRECTORY(camera)

INCLUDE_DIRECTORIES(calibration/include)
ADD_SUBDIRECTORY(calibration)

INCLUDE_DIRECTORIES(feature/include)
ADD_SUBDIRECTORY(feature)

INCLUDE_DIRECTORIES(odometry/include)
ADD_SUBDIRECTORY(odometry)

INCLUDE_DIRECTORIES(kinematics/include)
ADD_SUBDIRECTORY(kinematics)

INCLUDE_DIRECTORIES(symmath/include)
ADD_SUBDIRECTORY(symmath)
